--- a/anime-list.html
+++ b/anime-list.html
@@ -16,7 +16,7 @@
         </ul>
     </header>
     <main>
-        <h1>Anime List</h1>
+        <h1 id="main-heading">Anime List</h1>
         <ul>
             <li>Dragon Ball Z</li>
             <li>Fullmetal Alchemist</li>
@@ -25,5 +25,7 @@
             <li>Bleach</li>
         </ul>
     </main>
+
+    <script src="./app.js"></script>
 </body>
 </html>
