add getElementByClassName and loop through list

--- a/anime-list.html
+++ b/anime-list.html
@@ -18,11 +18,11 @@
     <main>
         <h1 id="main-heading">Anime List</h1>
         <ul>
-            <li>Dragon Ball Z</li>
-            <li>Fullmetal Alchemist</li>
-            <li>Attack on Titan</li>
-            <li>One Piece</li>
-            <li>Bleach</li>
+            <li class="list-items">Dragon Ball Z</li>
+            <li class="list-items">Fullmetal Alchemist</li>
+            <li class="list-items">Attack on Titan</li>
+            <li class="list-items">One Piece</li>
+            <li class="list-items">Bleach</li>
         </ul>
     </main>
 
