add style with java script

--- a/anime-list.html
+++ b/anime-list.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p>Anime</p>
+        <p id="logo">Anime</p>
         <ul class="nav">
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
