add element with js

--- a/anime-list.html
+++ b/anime-list.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <h1 id="main-heading">Anime List</h1>
-        <ul>
+        <ul id="anime-list">
             <li class="list-items">Dragon Ball Z</li>
             <li class="list-items">Fullmetal Alchemist</li>
             <li class="list-items">Attack on Titan</li>
